--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "core-js": "^2.4.1",
     "jquery": "^2.2.4",
     "materialize-css": "^0.97.7",
+    "moment": "^2.16.0",
+    "mydatepicker": "^1.0.5",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
